--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@prisma/client": "^5.17.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
